# crow

./: .gitignore  README.md
docs/: algorithm.md  approx.md  benchmark.md  binary.md  bounded-array.md  cache.md  channel.md  colour-space.md  colour.md  compact-array.md  constants.md  dice.md  dso.md  encoding.md  english.md  enum.md  fixed-binary.md  flexible-map.md  font.md  format.md  formula.md  geometry.md  guard.md  hash.md  hexmap.md  http.md  image.md  index-table.md  index.md  interpolate.md  interval-map.md  interval-set.md  interval.md  iterator.md  linear-map.md  log-scale.md  log.md  lru-cache.md  markov.md  markup.md  (+52 more)
docs/images/: colour-spaces.drawio  projection-classes.drawio
source/: CMakeLists.txt  crow.hpp
source/crow/: algorithm.hpp  approx.cpp  approx.hpp  benchmark.hpp  binary.hpp  bounded-array.hpp  cache.hpp  channel.cpp  channel.hpp  colour-space.hpp  colour.hpp  compact-array.hpp  constants.hpp  curl-api.hpp  curl-utility.hpp  dice.cpp  dso.cpp  dso.hpp  encoding.cpp  english.cpp  english.hpp  fixed-binary.hpp  flexible-map.hpp  font.cpp  font.hpp  format-floating.hpp  format-integer.hpp  format-print.hpp  format-range.cpp  format-range.hpp  format-spec.cpp  format-spec.hpp  format-traits.hpp  format-type.cpp  format-type.hpp  formula.hpp  geometry.hpp  guard.hpp  hash.cpp  hash.hpp  (+100 more)
source/crow/ucd/: canonical-combining-class.cpp  canonical-decomposition-mapping.cpp  east-asian-width.cpp  full-composition-exclusion.cpp  general-category.cpp  pattern-syntax.cpp  ucd.hpp  xid-continue.cpp  xid-start.cpp
source/test/: algorithm-test.cpp  approx-arithmetic-test.cpp  approx-formatting-test.cpp  binary-test.cpp  bounded-array-misc-test.cpp  bounded-array-tracking-test.cpp  channel-classes-test.cpp  channel-dispatch-test.cpp  colour-alpha-test.cpp  colour-conversion-test.cpp  colour-integer-channel-test.cpp  colour-space-test.cpp  colour-space-test.hpp  constants-test.cpp  dso-test.cpp  english-test.cpp  enum-test.cpp  fixed-binary-large-binary-100-test.cpp  fixed-binary-misc-test.cpp  flexible-map-test.cpp  flexible-set-test.cpp  font-test.cpp  format-floating-test.cpp  format-integer-test.cpp  format-misc-test.cpp  format-null-test.cpp  format-numeric-test.cpp  format-print-test.cpp  format-range-test.cpp  format-type-test.cpp  formula-test.cpp  geometry-test.cpp  guard-test.cpp  hash-test.cpp  hexmap-art-test.cpp  hexmap-building-test.cpp  image-io-test.cpp  image-resize-test.cpp  image-test.cpp  interval-continuous-arithmetic-test.cpp  (+112 more)
source/test/fonts/: license.txt
src/: CMakeLists.txt
src/crow/: algorithm.hpp  approx.cpp  approx.hpp  benchmark.hpp  binary.hpp  bounded-array.hpp  cache.hpp  colour-space.hpp  colour.cpp  colour.hpp  compact-array.hpp  constants.hpp  curl-api.cpp  curl-api.hpp  curl-utility.hpp  dice.cpp  dice.hpp  dso.cpp  dso.hpp  encoding.hpp  english.cpp  enum.hpp  fixed-binary.hpp  flexible-map.hpp  font.cpp  font.hpp  format-floating.cpp  format-floating.hpp  format-integer.hpp  format-numeric.cpp  format-numeric.hpp  format-range.hpp  format-spec.hpp  format-type.cpp  format-type.hpp  format.hpp  formula.hpp  geometry.hpp  guard.hpp  hash.hpp  (+86 more)
src/crow/ucd/: east-asian-width.cpp  extended-pictographic.cpp  grapheme-cluster-break.cpp  pattern-syntax.cpp  ucd.hpp  xid-continue.cpp
src/test/: algorithm-test.cpp  approx-construction-test.cpp  approx-formatting-test.cpp  approx-special-functions-test.cpp  benchmark-test.cpp  binary-test.cpp  bounded-array-construction-test.cpp  bounded-array-insertion-test.cpp  cache-test.cpp  colour-alpha-test.cpp  colour-floating-channel-test.cpp  colour-interpolation-test.cpp  colour-space-test.cpp  colour-string-test.cpp  compact-array-construction-test.cpp  compact-array-insertion-test.cpp  compact-array-misc-test.cpp  compact-array-tracking-test.cpp  constants-test.cpp  dice-test.cpp  dso-test.cpp  encoding-test.cpp  english-test.cpp  enum-arithmetic-test.cpp  enum-bitmask-test.cpp  enum-concepts-test.cpp  enum-definition-test.cpp  enum-internals-test.cpp  fixed-binary-large-binary-100-test.cpp  fixed-binary-large-binary-35-test.cpp  fixed-binary-small-binary-35-test.cpp  fixed-binary-small-binary-5-test.cpp  flexible-map-test.cpp  flexible-set-test.cpp  font-test.cpp  format-complex-test.cpp  format-integer-test.cpp  format-misc-test.cpp  format-numeric-test.cpp  format-print-test.cpp  (+101 more)
src/test/fonts/: DejaVu2.ttc
